# mac-uploader

./: Cargo.toml  build-mac-dock.sh  build-mac.sh  config.json
assets/: AppIcon.icns
src/: api_client.rs  app.rs  file_watcher.rs  main.rs  ui_theme.rs  upload_manager.rs  upload_queue.rs
