[package]
name = "mac-uploader"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
egui_extras = "0.29.1"
tokio = { version = "1.35.1", features = ["full"] }
reqwest = { version = "0.11.24", features = ["multipart", "json"] }
notify = "6.1.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
rfd = "0.13.0"
image = "0.24.8"
uuid = { version = "1.7.0", features = ["v4", "serde"] }
winit = { version = "0.30.5", features = [] }
chrono = { version = "0.4.33", features = ["serde"] }
env_logger = "0.11.3"
thiserror = "1.0.57"
webbrowser = "0.8.12"

[target.'cfg(target_os = "macos")']
rustflags = ["-C", "link-args=-Wl,-application_extension"]